Global exception handler and validation added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=dts-ecom
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:dts-e-commerce
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
